adding example application

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://tatsukisatoh.github.io/react-from-backend-learn/",
   "name": "example",
   "version": "0.1.0",
   "private": true,
